// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/api/appointments DELETE / /:appointmentId - delete appointment 1`] = `
Object {
  "entities": Object {},
}
`;

exports[`/api/appointments DELETE / /:appointmentId - delete appointment then undelete it 1`] = `
Object {
  "entities": Object {
    "appointments": Object {
      "6b215a42-5c33-4f94-8313-d89893ae2f36": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "chairId": null,
        "customBufferTime": null,
        "endDate": "2017-07-21T00:16:30.932Z",
        "estimatedRevenue": null,
        "id": "6b215a42-5c33-4f94-8313-d89893ae2f36",
        "isBookable": false,
        "isCancelled": false,
        "isDeleted": false,
        "isPatientConfirmed": false,
        "isPending": false,
        "isPreConfirmed": null,
        "isReminderSent": false,
        "isShortCancelled": false,
        "isSyncedWithPms": false,
        "note": null,
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "pmsId": "12",
        "practitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "reason": null,
        "serviceId": null,
        "startDate": "2017-07-21T00:14:30.932Z",
      },
    },
  },
  "result": "6b215a42-5c33-4f94-8313-d89893ae2f36",
}
`;

exports[`/api/appointments GET / / - retrieve appointments - pms not synced 1`] = `
Object {
  "entities": Object {
    "appointments": Object {
      "6b215a42-5c33-4f94-8313-d89893ae2f36": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "chairId": null,
        "customBufferTime": null,
        "endDate": "2017-07-21T00:16:30.932Z",
        "estimatedRevenue": null,
        "id": "6b215a42-5c33-4f94-8313-d89893ae2f36",
        "isBookable": false,
        "isCancelled": false,
        "isDeleted": false,
        "isPatientConfirmed": false,
        "isPending": false,
        "isPreConfirmed": null,
        "isReminderSent": true,
        "isShortCancelled": false,
        "isSyncedWithPms": false,
        "note": null,
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "pmsId": "12",
        "practitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "reason": null,
        "serviceId": null,
        "startDate": "2017-07-21T00:14:30.932Z",
      },
    },
  },
  "result": Array [
    "6b215a42-5c33-4f94-8313-d89893ae2f36",
  ],
}
`;

exports[`/api/appointments GET / / - retrieve appointments - return nothing - pms not synced 1`] = `
Object {
  "entities": Object {},
  "result": Array [],
}
`;

exports[`/api/appointments GET / / - retrieve appointments 1`] = `
Object {
  "entities": Object {
    "appointments": Object {
      "6b215a42-5c33-4f94-8313-d89893ae2f36": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "chairId": null,
        "customBufferTime": null,
        "endDate": "2017-07-21T00:16:30.932Z",
        "estimatedRevenue": null,
        "id": "6b215a42-5c33-4f94-8313-d89893ae2f36",
        "isBookable": false,
        "isCancelled": false,
        "isDeleted": false,
        "isPatientConfirmed": false,
        "isPending": false,
        "isPreConfirmed": null,
        "isReminderSent": true,
        "isShortCancelled": false,
        "isSyncedWithPMS": false,
        "isSyncedWithPms": false,
        "mark": false,
        "note": null,
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "pmsId": "12",
        "practitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "reason": null,
        "serviceId": null,
        "startDate": "2017-07-21T00:14:30.932Z",
      },
    },
  },
  "result": Array [
    "6b215a42-5c33-4f94-8313-d89893ae2f36",
  ],
}
`;

exports[`/api/appointments GET / /:appointmentId - retrieve an appointment 1`] = `
Object {
  "entities": Object {
    "appointments": Object {
      "6b215a42-5c33-4f94-8313-d89893ae2f36": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "chairId": null,
        "customBufferTime": null,
        "endDate": "2017-07-21T00:16:30.932Z",
        "estimatedRevenue": null,
        "id": "6b215a42-5c33-4f94-8313-d89893ae2f36",
        "isBookable": false,
        "isCancelled": false,
        "isDeleted": false,
        "isPatientConfirmed": false,
        "isPending": false,
        "isPreConfirmed": null,
        "isReminderSent": true,
        "isShortCancelled": false,
        "isSyncedWithPMS": false,
        "isSyncedWithPms": false,
        "mark": false,
        "note": null,
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "pmsId": "12",
        "practitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "reason": null,
        "serviceId": null,
        "startDate": "2017-07-21T00:14:30.932Z",
      },
    },
  },
  "result": "6b215a42-5c33-4f94-8313-d89893ae2f36",
}
`;

exports[`/api/appointments GET / /business - [no description] 1`] = `
Object {
  "brokenAppts": 0,
  "entities": Object {},
  "hygieneAppts": 1,
  "productionEarnings": Array [],
}
`;

exports[`/api/appointments GET / /stats - appointment appointmentsBooked for intelligence overview 1`] = `
Object {
  "appointmentsBooked": "1",
  "confirmedAppointments": 0,
  "entities": Object {},
}
`;

exports[`/api/appointments GET / /stats - appointment mostAppointments for intelligence overview 1`] = `
Array [
  Object {
    "birthDate": "1980-01-01T00:00:00.932Z",
    "firstName": "Ronald",
    "id": "10518e11-b9d2-4d74-9887-29eaae7b5938",
    "lastName": "Mcdonald",
    "numAppointments": "1",
  },
]
`;

exports[`/api/appointments GET / /stats - appointment practitionerWorked for intelligence overview 1`] = `
Array [
  Object {
    "avatarUrl": null,
    "booked": 0,
    "firstName": "Colonel",
    "id": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
    "lastName": "Sanders",
    "newPatientsTotal": 0,
    "notFilled": 6570,
    "type": "Hygienist",
  },
]
`;

exports[`/api/appointments GET / /stats - appointment stats for intelligence overview 1`] = `
Object {
  "activePatients": 1,
  "entities": Object {},
  "newPatients": 0,
}
`;

exports[`/api/appointments GET / /statsdate - data for most popular day of the week 1`] = `
Object {
  "days": Array [
    0,
    0,
    0,
    0,
    1,
    0,
    0,
  ],
  "entities": Object {},
}
`;

exports[`/api/appointments GET / /statslastyear - data for past year 1`] = `
Object {
  "age": Array [
    0,
    0,
    0,
    1,
    0,
    0,
  ],
  "data": Array [
    0,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
  ],
  "entities": Object {},
  "months": Array [
    "March",
    "April",
    "May",
    "June",
    "July",
    "August",
    "September",
    "October",
    "November",
    "December",
    "January",
    "February",
  ],
}
`;

exports[`/api/appointments GET /insights /insights - appointment insights 1`] = `
Object {
  "insights": Array [
    Object {
      "type": "missingMobilePhone",
      "value": null,
    },
    Object {
      "type": "missingEmail",
      "value": null,
    },
  ],
}
`;

exports[`/api/appointments POST / / - create a Cancel - only isCancelled field should be true not isShortCancelled 1`] = `
Object {
  "entities": Object {
    "appointments": Object {
      "6b215a42-5c33-4f94-8313-d89893ae2f36": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "chairId": null,
        "customBufferTime": null,
        "endDate": "2017-07-21T00:16:30.932Z",
        "estimatedRevenue": null,
        "id": "6b215a42-5c33-4f94-8313-d89893ae2f36",
        "isBookable": false,
        "isCancelled": true,
        "isDeleted": false,
        "isPatientConfirmed": false,
        "isPending": false,
        "isPreConfirmed": null,
        "isReminderSent": true,
        "isShortCancelled": false,
        "isSyncedWithPMS": false,
        "isSyncedWithPms": false,
        "mark": false,
        "note": null,
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "pmsId": "12",
        "practitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "reason": null,
        "serviceId": null,
        "startDate": "2017-07-21T00:14:30.932Z",
      },
    },
  },
  "result": "6b215a42-5c33-4f94-8313-d89893ae2f36",
}
`;

exports[`/api/appointments POST / / - create a short Cancel - both cancelled fields should be true 1`] = `
Object {
  "entities": Object {
    "appointments": Object {
      "6b215a42-5c33-4f94-8313-d89893ae2f36": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "chairId": null,
        "customBufferTime": null,
        "endDate": "2017-07-21T00:16:30.932Z",
        "estimatedRevenue": null,
        "id": "6b215a42-5c33-4f94-8313-d89893ae2f36",
        "isBookable": false,
        "isCancelled": true,
        "isDeleted": false,
        "isPatientConfirmed": false,
        "isPending": false,
        "isPreConfirmed": null,
        "isReminderSent": true,
        "isShortCancelled": true,
        "isSyncedWithPMS": false,
        "isSyncedWithPms": false,
        "mark": false,
        "note": null,
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "pmsId": "12",
        "practitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "reason": null,
        "serviceId": null,
        "startDate": "2017-07-21T00:14:30.932Z",
      },
    },
  },
  "result": "6b215a42-5c33-4f94-8313-d89893ae2f36",
}
`;

exports[`/api/appointments POST / / - create an appointment 1`] = `
Object {
  "entities": Object {
    "appointments": Object {
      "6b215a42-5c33-4f94-8313-d89893ae2f36": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "chairId": null,
        "customBufferTime": null,
        "endDate": "2017-07-21T00:16:30.932Z",
        "estimatedRevenue": null,
        "id": "6b215a42-5c33-4f94-8313-d89893ae2f36",
        "isBookable": false,
        "isCancelled": false,
        "isDeleted": false,
        "isPatientConfirmed": false,
        "isPending": false,
        "isPreConfirmed": null,
        "isReminderSent": true,
        "isShortCancelled": false,
        "isSyncedWithPMS": false,
        "isSyncedWithPms": false,
        "mark": false,
        "note": null,
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "pmsId": "12",
        "practitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "reason": null,
        "serviceId": null,
        "startDate": "2017-07-21T00:14:30.932Z",
      },
    },
  },
  "result": "6b215a42-5c33-4f94-8313-d89893ae2f36",
}
`;

exports[`/api/appointments PUT / /:appointmentId - update appointment 1`] = `
Object {
  "entities": Object {
    "appointments": Object {
      "6b215a42-5c33-4f94-8313-d89893ae2f36": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "chairId": null,
        "customBufferTime": null,
        "endDate": "2017-07-21T00:16:30.932Z",
        "estimatedRevenue": null,
        "id": "6b215a42-5c33-4f94-8313-d89893ae2f36",
        "isBookable": false,
        "isCancelled": false,
        "isDeleted": false,
        "isPatientConfirmed": false,
        "isPending": false,
        "isPreConfirmed": null,
        "isReminderSent": false,
        "isShortCancelled": false,
        "isSyncedWithPMS": true,
        "isSyncedWithPms": true,
        "mark": false,
        "note": null,
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "pmsId": "12",
        "practitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "reason": null,
        "serviceId": null,
        "startDate": "2017-07-21T00:14:30.932Z",
      },
    },
  },
  "result": "6b215a42-5c33-4f94-8313-d89893ae2f36",
}
`;

exports[`/api/appointments PUT / /batch - update 1 appointment 1`] = `
Object {
  "entities": Object {
    "appointments": Object {
      "6b215a42-5c33-4f94-8313-d89893ae2f36": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "chairId": null,
        "customBufferTime": null,
        "endDate": "2017-07-21T00:16:30.932Z",
        "estimatedRevenue": null,
        "id": "6b215a42-5c33-4f94-8313-d89893ae2f36",
        "isBookable": false,
        "isCancelled": false,
        "isDeleted": false,
        "isPatientConfirmed": false,
        "isPending": false,
        "isPreConfirmed": null,
        "isReminderSent": false,
        "isShortCancelled": false,
        "isSyncedWithPMS": false,
        "isSyncedWithPms": false,
        "mark": false,
        "note": null,
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "pmsId": "12",
        "practitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "reason": null,
        "serviceId": null,
        "startDate": "2017-07-21T00:14:30.932Z",
      },
    },
  },
  "result": Array [
    "6b215a42-5c33-4f94-8313-d89893ae2f36",
  ],
}
`;
